# Red-Oil

./: DigDug.opensdf  DigDug.sln  README.md
Debug/: DigDug.ilk
DigDug/: Block.cpp  Block.h  DigDug.aps  DigDug.vcxproj  DigDug.vcxproj.filters  Drops.cpp  Drops.h  Enemies.cpp  Enemies.h  Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp  Music.cpp  Music.h  Ornament.cpp  Ornament.h  Player.cpp  Player.h  Resource.aps  Resource.rc  SDL_setup.cpp  SDL_setup.h  Shop.cpp  Shop.h  Text.cpp  Text.h  Tools.cpp  Tools.h  World.cpp  World.h  resource.h  sprites.cpp  sprites.h  stdafx.h
DigDug/Debug/: vc120.idb
DigDug/Debug/DigDug.tlog/: CL.read.1.tlog  CL.write.1.tlog  DigDug.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
DigDug/Release/: Resource.res
DigDug/Release/DigDug.tlog/: CL.read.1.tlog  CL.write.1.tlog  DigDug.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
DigDug/include/: Makefile.am  Makefile.in  SDL_freetype.c  SDL_freetype.h  SDL_freetypecoding.c  SDL_freetypeloader.c  SDL_freetypeutils.c  SDL_freetypeutils.h  SDL_memset4.h
